# BTC-Pulse

./: .gitignore  AGENT_DESIGN.md  PRIVACY_COMPLIANCE.md  PROJECT_OVERVIEW.md  PROJECT_REVIEW.md  README.md  config.yaml.example  demo.md  projectproposal.md  pyproject.toml  requirements.txt  run_backtest.py  run_compare_strategies.py  run_dashboard.py  run_ingest.py  run_strategy_backtest.py
collectors/: __init__.py  derivatives.py  market.py  news.py  sentiment.py
dashboard/: __init__.py  app.py
database/: __init__.py  init_db.py
features/: __init__.py  engine.py
freqtrade_bridge/: __init__.py  backtester.py  data_provider.py  hyperopt.py  risk_manager.py  strategy.py
models/: __init__.py  anomaly.py  backtest.py  llm_sentiment.py  signals.py  xgboost_model.py
presentation/: OUTLINE.md  generate_slides.py
tests/: __init__.py  test_core.py  test_statistics.py
utils/: __init__.py  config.py  logging.py  retry.py  statistics.py
